# Open-Infra-Platform

./: .clang-format  .gitignore  .hgignore  CMakeLists.txt  CMakeLists.txt.orig  DoxygenHelp.md  LICENSE  LICENSE.txt  License.txt  OIP.licenseheader  OpenInfraPlatform_UI.pro  Readme.md  Readme.md.orig
Base/: CMakeLists.txt
Base/src/: BBox.h  GeorefMetadata.h  IModel.h  namespace.h
Core/: CMakeLists.txt
Core/src/Exception/: IfcPeekReaderException.h  InconsistentGeometryException.cpp  InconsistentGeometryException.h  InconsistentModelingException.cpp  InconsistentModelingException.h  OffReaderException.h  OsmDataReaderException.h  RecursiveCallException.h  ReferenceExpiredException.cpp  ReferenceExpiredException.h  UnhandledException.cpp  UnhandledException.h  namespace.h
Core/src/IfcGeometryConverter/: CarveHeaders.h  ConverterBase.h  ConverterBuw.h  CurveConverter.h  FaceConverter.h  GeomUtils.cpp  GeomUtils.h  GeometryInputData.cpp  GeometryInputData.h  GeometrySettings.cpp  GeometrySettings.h  GeorefConverter.h  IfcGeometryModel.cpp  IfcGeometryModel.h  IfcImporter.cpp  IfcImporter.h  IfcImporterImpl.h  IfcImporterUtil.h  IfcImporterUtilImpl.cpp  IfcImporterUtilImpl.h  IfcPeekStepReader.cpp  IfcPeekStepReader.h  PlacementConverter.h  PlacementConverterImpl.cpp  PlacementConverterImpl.h  ProfileCache.h  ProfileConverter.h  RepresentationConverter.h  SolidModelConverter.h  SpiralUtils.cpp  SpiralUtils.h  SplineConverter.h  SplineUtilities.h  StylesConverter.h  UnhandledException.h  UnhandledRepresentationException.h  UnitConverter.h  namespace.h
Core/src/OffConverter/: OffModel.cpp  OffModel.h  OffReader.cpp  OffReader.h  namespace.h
Core/src/OsmDataConverter/: OsmDataGeometry.cpp  OsmDataGeometry.h  OsmDataModel.cpp  OsmDataModel.h  OsmDataReader.cpp  OsmDataReader.h  namespace.h
Core/src/SplineInterpretation/: SplineInterpretation.cpp  SplineInterpretation.h  SplineInterpretationElement.cpp  SplineInterpretationElement.h
EarlyBinding/: CMakeLists.txt
EarlyBinding/src/: earlybinding_api.h  namespace.h
EarlyBinding/src/EXPRESS/: EXPRESS.h  EXPRESSAttribute.h  EXPRESSContainer.h  EXPRESSEntity.cpp  EXPRESSEntity.h  EXPRESSModel.cpp  EXPRESSModel.h  EXPRESSObject.cpp  EXPRESSObject.h  EXPRESSOptional.cpp  EXPRESSOptional.h  EXPRESSOptionalImpl.h  EXPRESSReference.cpp  EXPRESSReference.h  EXPRESSReferenceImpl.h  EXPRESSType.h  EnumType.h  SelectType.h  ValueType.cpp  ValueType.h
ExpressBinding/: CMakeLists.txt
ExpressBinding/CodeMonkey/: codemonkey.bcm
ExpressBindingGenerator/: CMakeLists.txt
ExpressBindingGenerator/schemas/: IFC2X3_TC1.exp  IFC2X4_RC3-Bridge.exp  IFC4X3.exp  IFC4X3_ALPHA.exp  IFC4X3_RC1.exp  IFC4X3_RC4.exp  IFC4_ADD1.exp  IFC4_ADD1_Tunnel.exp  IFC4_ADD2_TC1.exp  IFC4_P6_longform_draft5.exp  IFC4x1_RC3.exp  IFC4x2.exp  IFC4x2_BIM4ROAD.exp  IFC4x3_RC2.exp  IFC4x3_RC3.exp
ExpressBindingGenerator/src/General/: graph.h  main.cpp  memory.h  namespace.h  stack.h
ExpressBindingGenerator/src/Generator/: Generator.h  GeneratorCSharp.Net.h  GeneratorEcho.cpp  GeneratorEcho.h  GeneratorOIP.cpp  GeneratorOIP.h  GeneratorVB.Net.h
ExpressBindingGenerator/src/Meta/: Entity.cpp  Entity.h  EntityAttribute.cpp  EntityAttribute.h  IRestrictible.h  Schema.cpp  Schema.h  Type.cpp  Type.h  Where.h  eExpressTokenType.h
ExpressBindingGenerator/src/Parser/: node.cpp  node.h  parser.y  tokens.l
ExpressGenerator/: CMakeLists.txt  CMakeLists.txt.in
ExpressGenerator/Tools/win_flex_bison-2.5.5/: README.txt
ExpressGenerator/schemas/: IFC4_P6_longform_draft5_withMinorSyntaxCorrection.exp  IFC4x2_DRAFT_1.exp  IfcRoad.exp
Ifc2x3/: CMakeLists.txt
Ifc4/: CMakeLists.txt
Ifc4/schema/: IFC4_ADD1.xsd
IfcAlignment/: CMakeLists.txt
IfcAlignment/schema/: IFC4_P6_longform_draft5_withMinorSyntaxCorrection.exp
IfcAlignment1x1_original/: CMakeLists.txt
IfcBridge/: CMakeLists.txt
IfcBridge/schema/: IFC2X4_RC3-Bridge.exp
IfcRoad/: CMakeLists.txt
IfcRoad/schema/: IfcRoad.exp
IfcTunnel/: CMakeLists.txt
IfcTunnel/schema/: IFC4_ADD1_Tunnel.exp  IFC4_withTunnelExtension_UsedForPrebuildLibs.exp
Infrastructure/: CMakeLists.txt
Infrastructure/CodeMonkey/: BlueInfrastructure.cppcheck
Infrastructure/canonicalHeaders/: buw.OIPInfrastructure.h
PointCloudProcessing/: CMakeLists.txt
PointCloudProcessing/cmake/: FindLibLAS.cmake
PointCloudProcessing/src/: Octree.cpp  Octree.h  PointCloud.cpp  PointCloud.h  PointCloudProcessing.cpp  PointCloudProcessing.h  PointCloudSection.cpp  PointCloudSection.h  namespace.h
Rendering/: CMakeLists.txt  namespace.h
Rendering/Data/: Copyright.txt  viewCube.json
Rendering/Data/DesignAutomation/: euclid.py  line.py
Rendering/Data/Ontology/: IFC4x1.ttl  Okstra.ttl
Rendering/Data/docs/: index.html
Rendering/Data/translations/: Deutsch.ts  English.ts
Rendering/Effects/: BoundingBoxEffect.cpp  BoundingBoxEffect.h  BoxEffect.cpp  BoxEffect.h  GradientClearEffect.cpp  GradientClearEffect.h  IfcGeometryEffect.cpp  IfcGeometryEffect.h  OffGeometryEffect.cpp  OffGeometryEffect.h  OsmGeometryEffect.cpp  OsmGeometryEffect.h  SkyboxEffect.cpp  SkyboxEffect.h  UIElementsEffect.cpp  UIElementsEffect.h
Rendering/Effects/PointCloudProcessing/: PointCloudEffect.cpp  PointCloudEffect.h
Rendering/Resources/: EffectBase.cpp  EffectBase.h  RenderResources.cpp  RenderResources.h
Rendering/Shader/: AlignmentEffect.be  BoundingBoxEffect.be  BoxEffect.be  DEMEffect.be  OffGeometryEffect.be  SectionedSolidEffect.be  SkyboxEffect.be  ViewCubeEffect.be
Rendering/Shader/D3D/: AlignmentShader.hlsl  CoordinateSystem.hlsl  DEMShader.hlsl  GradientQuad.hlsl  (+8 more)
Rendering/Style/: blueform.qss
Rendering/Tools/: SplineInterpretation.cpp  SplineInterpretation.h  SplineInterpretationElement.cpp  SplineInterpretationElement.h  Tool.cpp  Tool.h
UnitTests/: CMakeLists.txt  main.cpp
UnitTests/Generator/: CMakeLists.txt
UnitTests/Off/: CMakeLists.txt
UnitTests/Schemas/: CMakeLists.txt
UnitTests/StrokeToAlignment/: readme.md
UnitTests/Utilities/: CMakeLists.txt
oip/: CMakeLists.txt  main.cpp
oip/tclap/: CmdLineOutput.h  MultiArg.h
(+19101 files in other folders)
